Fix mapboxgl-children overlapping components with a blank element; Started Location.js

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,3 +89,7 @@
   * This will create a rounded blue button with white text for each element that has className="btn"
   */
 }
+
+[mapboxgl-children] {
+  display: none;
+}
